# uncia

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
.github/workflows/: ci.yml
include/: archive.hpp  format.hpp  revision.h.cmake  version.hpp
lib/: CMakeLists.txt  ced.cc  fs.cc
lib/libarchive/: CMakeLists.txt  archive.h  archive_entry.h  archive_platform.h  config.h
lib/zlib/: deflate.c  trees.c
lib/zlib-intel/: README.txt  adler32.c  crc32.c  crc_folding.c  deflate.c  deflate.h  deflate_medium.c  deflate_quick.c  inffast.c  inflate.c  inflate.h  match.c  slide_sse.c  trees.c  trees.h  x86.c  x86.h  zutil.h
tools/baulktar/: CMakeLists.txt  archive.cc  baulktar.cc  baulktar.hpp  baulktar.rc  dump.cc  extract.cc  filter.cc  version.h
tools/bsdtar/: CMakeLists.txt  bsdtar.c  bsdtar.manifest  bsdtar.rc  version.h
tools/btar/: CMakeLists.txt  btar.cc  btar.rc
tools/uncia/: CMakeLists.txt  archive.cc  extract.cc  extractor.cc  extractor.hpp  filter.cc  msic.cc  uncia.cc  uncia.hpp  uncia.manifest  uncia.rc
tools/wintar/: CMakeLists.txt  bsdtar.rc  wintar.manifest
